Added input fields for tagging form

--- a/Aufgabe1/gta_v1/public/index.html
+++ b/Aufgabe1/gta_v1/public/index.html
@@ -39,6 +39,10 @@
                     <label for="nameInputField">Name</label>
                     <input name=nameInput" type="text" id="nameInputField">
                 </div>
+                <div class="form-field">
+                    <label for="hashtagInputField">Hashtag</label>
+                    <input name=hashtagInput" type="text" id="hashtagInputField">
+                </div>
 
 
 
