--- a/Aufgabe1/gta_v1/public/index.html
+++ b/Aufgabe1/gta_v1/public/index.html
@@ -28,9 +28,23 @@
             <!-- ############### VS1Lab 1a Form 1 Start -->
             <form id="tag-form" action="/tagging" method="post">
 
-
-
                 <!-- ... your code here ... -->
+                <fieldset id="tag_fieldset">
+                    <legend>Add a new GeoTag</legend>
+                    <label for="lat">Latitude:</label>
+                    <input type="text" name="latitude_field_name" id="lat" placeholder="49.01379" />
+
+                    <label for="long">Longitude:</label>
+                    <input type="text" name="longitude_field_name" id="long" placeholder="8.390071" />
+
+                    <label for="name">Name:</label>
+                    <input type="text" name="name_field_name" id="name" placeholder="e.g. Central Berlin" />
+
+                    <label for="hash">Hashtag: </label>
+                    <input type="text" name="hashtag_field_name" id="hash" placeholder="e.g. #ber" />
+
+                    <input type="submit" value="Add Tag" />
+                </fieldset>
 
             </form>
             <!-- ############### VS1Lab 1a Form 1 End -->
@@ -44,6 +58,13 @@
             <form class="discovery__search" id="discoveryFilterForm" action="/discovery" method="post">
 
                 <!-- ... your code here ... -->
+                <fieldset id="disc_fieldset">
+                    <legend>Search</legend>
+                    <label for="disc">Search term or keywords:</label>
+                    <input type="text" name="discovery_field_name" id="disc" placeholder="e.g. Berlin" />
+
+                    <input type="submit" value="Search" />
+                </fieldset>
 
             </form>
             <!-- ############### VS1Lab 1a Form 2 End -->
