--- a/Aufgabe1/gta_v1/public/index.html
+++ b/Aufgabe1/gta_v1/public/index.html
@@ -77,18 +77,21 @@
                     </form>
                     <!-- ############### VS1Lab 1a Form 2 End -->
         
-                    <div class="discovery__wrapper row">
-                        <div class="discovery__taglist col-3">
-                            <ul class="discovery__results" id="discoveryResults">
-                                <li>Castle (49.01379, 8.404435) #sight</li>
-                                <li>IWI (49.01379, 8.390071) #edu</li>
-                            </ul>
-                        </div>
-        
-                        <div class="col-9">
-                            <div class = "discovery__map">
-                                <img src="./images/mapview.jpg" alt="a map with locations" id="mapView" />
-                                <span>Result map</span>
+                    <div class="discovery__wrapper">
+                        <div class="row">
+                            <div class="col-5">
+                                <div class ="discovery__map">
+                                    <img src="./images/mapview.jpg" alt="a map with locations" id="mapView" />
+                                    <span>Result map</span>
+                                </div>
+                            </div>
+                            <div class="col-3">
+                                <div class="discovery__taglist">
+                                    <ul class="discovery__results" id="discoveryResults">
+                                        <li>Castle (49.01379, 8.404435) #sight</li>
+                                        <li>IWI (49.01379, 8.390071) #edu</li>
+                                    </ul>
+                                </div>
                             </div>
                         </div>
                     </div>
