Added hidden Input fields

--- a/Aufgabe1/gta_v1/public/index.html
+++ b/Aufgabe1/gta_v1/public/index.html
@@ -69,6 +69,10 @@
                                     <label for="disc">Search term or keywords:</label>
                                     <input type="text" name="discovery_field_name" id="disc" placeholder="e.g. Berlin" />
 
+                                    <input type="hidden" name="discovery_hidden_latitude">
+                                    <input type="hidden" name="discovery_hidden_longitude">
+                                    <input type="hidden" name="discovery_hidden_searchterm">
+
                                     <input type="submit" value="Search" />
                                 </div>
                             </div>
