--- a/Aufgabe1/gta_v1/public/index.html
+++ b/Aufgabe1/gta_v1/public/index.html
@@ -27,23 +27,23 @@
                 <section class="main__tagging tagging">
                     <h2>Tagging</h2>
 
-                    <!-- ############### VS1Lab 1a orm 1 Start -->
+                    <!-- ############### VS1Lab 1a Form 1 Start -->
                     <form id="tag-form" action="/tagging" method="post">
                         <!-- ... your code here ... -->
                         <fieldset id ="tag_fieldset">
                             <legend>Add a new GeoTag</legend>
 
                             <label class="FormLabel">Latitude</label>
-                            <input type="text" name="latitude_field_name" placeholder="49.01379" readonly/>
+                            <input type="number" name="latitude_field_name" id="lat" placeholder="49.01379" required/>
 
                             <label for="long">Longitude:</label>
-                            <input type="text" name="longitude_field_name" id="long" placeholder="8.390071" readonly/>
+                            <input type="number" name="longitude_field_name" id="long" placeholder="8.390071" required/>
 
                             <label for="name">Name:</label>
-                            <input type="text" name="name_field_name" id="name" placeholder="e.g. Central Berlin" />
+                            <input type="text" name="name_field_name" id="name" placeholder="e.g. Central Berlin" maxlength=10 required/>
 
                             <label for="hash">Hashtag: </label>
-                            <input type="text" name="hashtag_field_name" id="hash" placeholder="e.g. #ber" />
+                            <input type="text" name="hashtag_field_name" id="hash" placeholder="e.g. #ber" pattern="#[A-Za-z]{1,10}"/>
 
                             <input type="submit" value="Add Tag"/>
                         </fieldset>
