--- a/Aufgabe1/gta_v1/public/index.html
+++ b/Aufgabe1/gta_v1/public/index.html
@@ -67,7 +67,7 @@
                             <div class="row">
                                 <div class="col-4">
                                     <label for="disc">Search term or keywords:</label>
-                                    <input type="text" name="discovery_field_name" id="disc" placeholder="e.g. Berlin" />
+                                    <input type="text" name="discovery_field_name" id="disc" placeholder="e.g. Berlin" maxlength=10 required/>
 
                                     <input type="hidden" name="discovery_hidden_latitude">
                                     <input type="hidden" name="discovery_hidden_longitude">
