undo longitude and latitude inputs to readonly

--- a/Aufgabe1/gta_v1/public/index.html
+++ b/Aufgabe1/gta_v1/public/index.html
@@ -33,11 +33,11 @@
                         <fieldset id ="tag_fieldset">
                             <legend>Add a new GeoTag</legend>
 
-                            <label class="FormLabel">Latitude</label>
-                            <input type="number" name="latitude_field_name" id="lat" placeholder="49.01379" required/>
+                            <label for="lat">Latitude</label>
+                            <input type="text" name="latitude_field_name" id="lat" placeholder="49.01379" readonly/>
 
                             <label for="long">Longitude:</label>
-                            <input type="number" name="longitude_field_name" id="long" placeholder="8.390071" required/>
+                            <input type="text" name="longitude_field_name" id="long" placeholder="8.390071" readonly/>
 
                             <label for="name">Name:</label>
                             <input type="text" name="name_field_name" id="name" placeholder="e.g. Central Berlin" maxlength=10 required/>
