--- a/Aufgabe2/gta_v2/public/index.html
+++ b/Aufgabe2/gta_v2/public/index.html
@@ -34,10 +34,10 @@
                             <legend>Add a new GeoTag</legend>
 
                             <label for="lat">Latitude</label>
-                            <input type="text" name="latitude_field_name" id="lat" placeholder="49.01379" readonly/>
+                            <input type="text" name="latitude_field_name" id="lat" readonly/>
 
                             <label for="long">Longitude:</label>
-                            <input type="text" name="longitude_field_name" id="long" placeholder="8.390071" readonly/>
+                            <input type="text" name="longitude_field_name" id="long" readonly/>
 
                             <label for="name">Name:</label>
                             <input type="text" name="name_field_name" id="name" placeholder="e.g. Central Berlin" maxlength=10 required/>
@@ -45,12 +45,15 @@
                             <label for="hash">Hashtag: </label>
                             <input type="text" name="hashtag_field_name" id="hash" placeholder="e.g. #ber" pattern="#[A-Za-z]{1,10}"/>
 
-                            <input type="submit" value="Add Tag"/>
+                            <div class="button-field">
+                                <input type="button" value="Refresh" onclick="updateLocation()">
+                                <input type="submit" value="Add Tag"/>
+                            </div>
+
                         </fieldset>
                 
                     </form>
                     <!-- ############### VS1Lab 1a Form 1 End -->
-        
                 </section>
             </div>
             <div class="col-8 discovery__layout">
@@ -101,5 +104,10 @@
         <span>(c) 2021/22 HKA_IWI_VSYS</span>
     </footer>
 </body>
+
+<!-- Load JavaScripts
+        ================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
+<script src="./javascripts/geotagging.js"></script>
 
 </html>
